[package]
name = "ember-cache"
version.workspace = true
edition.workspace = true

[dependencies]
dashmap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
ember-utils = { workspace = true }
ember-data = { workspace = true }
ember-shuffle = { path = "../ember-shuffle" }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
