[package]
name = "ember-data"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
rustc-hash ={ workspace = true }
log = { workspace = true }
ember-utils = { path = "../ember-utils" }
thiserror = { workspace = true }
dyn-clone = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
statrs = { workspace = true }
parking_lot = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
crossbeam = { workspace = true }
