[package]
name = "ember-shuffle"
version.workspace = true
edition.workspace = true

[dependencies]
hyper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
crossbeam = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
ember-data = { path = "../ember-data" }
http = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
log ={ workspace = true }
bincode ={ workspace = true }
num_cpus ={ workspace = true }
ember-utils = { path = "../ember-utils" }
async-trait = { workspace = true }
statrs = { workspace = true }
parking_lot = { workspace = true }
rustc-hash ={ workspace = true }
rand = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
