[package]
name = "docker-sum-task"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "docker-sum-task"
path = "src/main.rs"

# Isolate from root workspace — examples/* is excluded
[workspace]

[dependencies]
atomic-runtime = { path = "../../crates/atomic-runtime" }
rkyv = { version = "0.8.12", features = ["std", "bytecheck"] }
